--- a/mysql/mainfest.yml
+++ b/mysql/mainfest.yml
@@ -29,3 +29,21 @@ spec:
       containers:
       - name: mysql
         image: joindevops/mysql:v1.0
+
+-----
+
+kind: Service
+apiVersion: v1
+metadata:
+ name: mysql
+ namespace: expense
+spec:
+ selector:
+  component: mysql
+  project: expense
+  tier: db
+ ports:
+  - protocol: TCP
+    port: 3306
+    targetPort: 3306 
+
