--- a/backend/mainfest.yml
+++ b/backend/mainfest.yml
@@ -4,7 +4,7 @@ metadata:
  name: backend
  namespace: expense # mysql component service name
 data:
-  DB_HOSt: mysql
+  DB_HOST: mysql
  ---
 apiVersion: apps/v1
 kind: Deployment
