--- a/frontend/mainfest.yml
+++ b/frontend/mainfest.yml
@@ -122,6 +122,16 @@ spec:
       containers:
        - name: frontend
          image: joindevops/frontend:v1.0
+         volumeMounts:
+          - name: nginx-conf
+            mountPath: /etc/nginx/nginx.conf
+            subPath: nginx.conf
+            readOnly: true
+      volumeMounts:
+        - name: nginx-conf
+          mountPath: /etc/nginx/nginx.conf
+          subPath: nginx.conf
+          readOnly: true   
 
 ---
 
