--- a/backend/mainfest.yml
+++ b/backend/mainfest.yml
@@ -4,7 +4,8 @@ metadata:
  name: backend
  namespace: expense # mysql component service name
 data:
-  DB_HOST: mysql
+  # DB_HOST: mysql
+  DB_HOST: db.naveencloud.online
 
  
 ---
