--- a/frontend/mainfest.yml
+++ b/frontend/mainfest.yml
@@ -147,7 +147,7 @@ metadata:
  name: frontend
  namespace: expense
 spec:
- type: LoadBalancer
+#  type: LoadBalancer
  selector:
     component: frontend
     project: expense
@@ -156,4 +156,13 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 8080
-
+---
+apiVersion: elbv2.k8s.aws/v1beta1
+kind: TargetGroupBinding
+metadata:
+  name: my-tgb
+spec:
+  serviceRef:
+    name: awesome-service # route traffic to the awesome-service
+    port: 80
+  targetGroupARN: <arn:aws:elasticloadbalancing:us-east-1:445343720788:targetgroup/expense-dev-frontend/5918f346176f8df1
